--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "private": true,
-  "displayName": "Plugin Name",
-  "name": "homebridge-plugin-name",
+  "displayName": "RgbController",
+  "name": "homebridge-mqtt-rgb-controller",
   "version": "1.0.0",
   "description": "A short description about what your plugin does.",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "git://github.com/melnyk10/homebridge-mqtt-rgb-controller.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/melnyk10/homebridge-mqtt-rgb-controller/issues"
   },
   "engines": {
     "node": ">=10.17.0",
